<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_hero"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/label_heroimage"
            android:scaleType="centerCrop"
            android:src="@drawable/duke_390" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignBottom="@+id/iv_hero"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:contentDescription="@string/label_ktm"
            android:src="@drawable/ktm_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_hero"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:text="@string/label_ready_to_race"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textSize_18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_hero"
            android:orientation="vertical"
            android:padding="@dimen/dimen_16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_descroption"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:cardCornerRadius="@dimen/dimen_8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:contentDescription="@string/label_icon"
                        android:scaleType="center"
                        android:src="@drawable/ic_skyline" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/dimen_8dp"
                        android:layout_marginStart="@dimen/dimen_8dp"
                        android:fontFamily="@font/aldrich"
                        android:text="@string/label_orange_automotive"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textSize_14sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:cardCornerRadius="@dimen/dimen_8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:contentDescription="@string/label_icon"
                        android:scaleType="center"
                        android:src="@drawable/ic_phone_call" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/dimen_8dp"
                        android:layout_marginStart="@dimen/dimen_8dp"
                        android:autoLink="phone"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:fontFamily="@font/aldrich"
                        android:text="@string/label_1800_000_000"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textSize_14sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:cardCornerRadius="@dimen/dimen_8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:contentDescription="@string/label_icon"
                        android:scaleType="center"
                        android:src="@drawable/ic_envelope" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/dimen_8dp"
                        android:layout_marginStart="@dimen/dimen_8dp"
                        android:autoLink="email"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:fontFamily="@font/aldrich"
                        android:text="@string/label_info_ktm_com"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textSize_14sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:cardCornerRadius="@dimen/dimen_8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:contentDescription="@string/label_icon"
                        android:scaleType="center"
                        android:src="@drawable/ic_grid_world" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/dimen_8dp"
                        android:layout_marginStart="@dimen/dimen_8dp"
                        android:autoLink="web"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:fontFamily="@font/aldrich"
                        android:text="@string/label_https_www_ktm_com_in"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textSize_14sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:cardCornerRadius="@dimen/dimen_8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:contentDescription="@string/label_icon"
                        android:scaleType="center"
                        android:src="@drawable/ic_location" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/dimen_8dp"
                        android:layout_marginStart="@dimen/dimen_8dp"
                        android:autoLink="map"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:fontFamily="@font/aldrich"
                        android:text="@string/label_address"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textSize_14sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>